STB-1731: Code updated to create users in B2B Entra Workforce tenant